v3.16 (Mmm'YY)
  * Fix errors on content overwrite flash messages
  * Bugs fixed:
    -
  * Integration enhancements:
    -
  * REST/JSON API enhancements:
    -
  * Security Fixes:
    - 

v3.15 (November 2019)
 - Methodologies v2:
   - Kanban-style boards replaced the checklists
   - Tasks can move between lists
   - Assign tasks to different team members
   - Keep Notes and information on each task
   - Export Methodology details into your reports
 - Email notifications
 - Add notification settings to decide how often to get email notifications
 - Add an smtp.yml config file to handle the SMTP configuration
 - Various mention related improvements:
   - Enhance the mentions box in comments to close when it is open and the page is
   scrolled
   - Fix bug that prevents the mentions dialog from appearing after navigating
   through the app
   - Fixed elongated avatar images so they are round once again
   - Added avatar images to mentions in comments
   - Load gravatars for users who's email has been setup with gravatar
 - Enhancement when adding new nodes to copy node label data between the single
   and multiple node forms
 - All tables can be sorted by column
 - Bugs fixed:
   - Fix handling of pipe character in node property tables
   - Fix overflow issue where content would expand out of view
   - Fix page jump when issues list is collapsed
   - Fix conflicting version message when updating records with ajax
   - Fix hamburger dropdown menu functionality
   - Fix node merging bug when `services_extras` properties are present
   - Fix cross-project info rendering
   - Prevent content block group names to be whitespaces only
   - Fix displaying of content blocks with no block groups
   - Limit project name length when viewing a project
   - Removed bullet style in node modals
   - Validate parent node project
 - Integration enhancements:
   - Burp: Make `issue.severity` available at the Issue level