@@ -1,5 +1,6 @@
 v3.16 (Mmm'YY)
   * Fix errors on content overwrite flash messages
+  * Fail and redirect to login instead of raising an error when attempting to log in as a user that has been removed.
   * Bugs fixed:
     -
   * Integration enhancements:
